--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "organization-dashboard",
   "version": "0.1.0",
   "scripts": {
+    "start": "node index.js",
     "fmt": "prettier --write .",
     "fix": "prettier --write .; eslint --fix .",
     "lint": "prettier --check . && eslint ."
