--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@influxdata/influxdb-client": "^1.33.2",
     "axios": "^1.4.0",
+    "dotenv": "^16.3.1",
     "papaparse": "^5.4.1",
     "yargs": "^17.7.2"
   }
