--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "type": "module",
   "scripts": {
     "start": "node src/index.js",
+    "test": "playwright test",
     "fmt": "prettier --write .",
     "fix": "prettier --write .; eslint --fix .",
     "lint": "prettier --check . && eslint ."
   },
   "devDependencies": {
+    "@playwright/test": "^1.35.1",
     "eslint": "^8.42.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.8.0",
+    "playwright": "^1.35.1",
     "prettier": "^2.8.8"
   },
   "dependencies": {
