--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -2,9 +2,16 @@ extends:
   - eslint:recommended
   - airbnb-base
   - prettier
+  - plugin:@typescript-eslint/recommended
+parser: "@typescript-eslint/parser"
+plugins:
+  - "@typescript-eslint"
+ignorePatterns:
+  - lib/
+rules:
+  import/no-unresolved: off
+  import/extensions: off
 overrides: []
 parserOptions:
   ecmaVersion: latest
   sourceType: module
-rules:
-  import/extensions: off
