--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "organization-dashboard",
   "version": "0.1.0",
-  "type": "module",
   "scripts": {
-    "start": "node src/index.js",
+    "build": "tsc",
+    "prestart": "tsc",
+    "start": "node lib/index.js",
     "test": "playwright test",
     "fmt": "prettier --write .",
     "fix": "prettier --write .; eslint --fix .",
@@ -11,11 +12,15 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.35.1",
+    "@types/yargs": "^17.0.24",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
     "eslint": "^8.42.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.8.0",
     "playwright": "^1.35.1",
-    "prettier": "^2.8.8"
+    "prettier": "^2.8.8",
+    "typescript": "^5.1.6"
   },
   "dependencies": {
     "@influxdata/influxdb-client": "^1.33.2",
