Enable strict mode in TypeScript

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -11,6 +11,7 @@ ignorePatterns:
 rules:
   import/no-unresolved: off
   import/extensions: off
+  "@typescript-eslint/explicit-function-return-type": error
 overrides: []
 parserOptions:
   ecmaVersion: latest
