--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@influxdata/influxdb-client": "^1.33.2",
     "axios": "^1.4.0",
     "dotenv": "^16.3.1",
+    "jsdom": "^22.1.0",
     "papaparse": "^5.4.1",
     "yargs": "^17.7.2"
   }
