--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,6 +13,8 @@ jobs:
           node-version: 18
       - name: Install dependencies
         run: npm ci
+      - name: Compile
+        run: npm run build
       - name: Lint
         run: npm run lint
       - name: Test
