--- a/.github/workflows/weekly.yml
+++ b/.github/workflows/weekly.yml
@@ -10,10 +10,10 @@ jobs:
     if: github.repository_owner == 'ParkingReformNetwork'
     runs-on: ubuntu-latest
     env:
-      ENV_VAR_1: ${{ secrets.INFLUXDB_API_TOKEN }}
-      ENV_VAR_2: ${{ secrets.INFLUXDB_BUCKET }}
-      ENV_VAR_3: ${{ secrets.INFLUXDB_ORG }}
-      ENV_VAR_4: ${{ secrets.INFLUXDB_URL }}
+      INFLUXDB_API_TOKEN: ${{ secrets.INFLUXDB_API_TOKEN }}
+      INFLUXDB_BUCKET: ${{ secrets.INFLUXDB_BUCKET }}
+      INFLUXDB_ORG: ${{ secrets.INFLUXDB_ORG }}
+      INFLUXDB_URL: ${{ secrets.INFLUXDB_URL }}
 
     steps:
       - name: Check out repository code
@@ -26,9 +26,3 @@ jobs:
         run: npm ci
       - name: Run progam
         run: npm run start -- --services --map-projects
-      - name: Set up environment variables
-        run: |
-          echo $ENV_VAR_1
-          echo $ENV_VAR_2
-          echo $ENV_VAR_3
-          echo $ENV_VAR_4
