--- a/.github/workflows/weekly.yml
+++ b/.github/workflows/weekly.yml
@@ -25,4 +25,4 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Run progam
-        run: npm run start -- --services --map-projects
+        run: npm run start -- --services map-projects
